dataset1235/2025-2/610742602/users/2070606917/executions/677928262_704983377.log
== SUBMISSION (2025-08-26 21:10:50)
-- CODE: 
X = int(input("Digite o valor de X:"))
Y = int(input("Digite o valor de Y:"))

# 1. Quociente da divisão inteira
quociente_inteiro = X// Y
# 2. Resto da divisão inteira
resto_inteiro = X % Y
# 3. Quociente da divisão real
quociente_real = X / Y
# 4. Produto de X vezes Y
Produto = x * Y
# 5. Valor de Y elevado à tereira potência
potencia = Y ** 3

# 5. Impressão na ordem solicitada
print (quociente_inteiro)
print(resto_inteiro)
print(quociente_real)
print(produto)
print(potencia)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Produto = x * Y
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Produto = x * Y
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Produto = x * Y
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Produto = x * Y
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Produto = x * Y
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Produto = x * Y
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:11:45)
-- CODE: 
X = int(input("Digite o valor de X:"))
Y = int(input("Digite o valor de Y:"))

# 1. Quociente da divisão inteira
quociente_inteiro = X // Y
# 2. Resto da divisão inteira
resto_inteiro = X % Y
# 3. Quociente da divisão real
quociente_real = X / Y
# 4. Produto de X vezes Y
Produto = X * Y
# 5. Valor de Y elevado à tereira potência
potencia = Y ** 3

# 5. Impressão na ordem solicitada
print (quociente_inteiro)
print(resto_inteiro)
print(quociente_real)
print(produto)
print(potencia)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(produto)
          ^^^^^^^
NameError: name 'produto' is not defined. Did you mean: 'Produto'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(produto)
          ^^^^^^^
NameError: name 'produto' is not defined. Did you mean: 'Produto'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(produto)
          ^^^^^^^
NameError: name 'produto' is not defined. Did you mean: 'Produto'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(produto)
          ^^^^^^^
NameError: name 'produto' is not defined. Did you mean: 'Produto'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(produto)
          ^^^^^^^
NameError: name 'produto' is not defined. Did you mean: 'Produto'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(produto)
          ^^^^^^^
NameError: name 'produto' is not defined. Did you mean: 'Produto'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:12:40)
-- CODE: 
X = int(input("Digite o valor de X:"))
Y = int(input("Digite o valor de Y:"))

# 1. Quociente da divisão inteira
quociente_inteiro = X // Y
# 2. Resto da divisão inteira
resto_inteiro = X % Y
# 3. Quociente da divisão real
quociente_real = X / Y
# 4. Produto de X vezes Y
produto = X * Y
# 5. Valor de Y elevado à tereira potência
potencia = Y ** 3

# 5. Impressão na ordem solicitada
print (quociente_inteiro)
print(resto_inteiro)
print(quociente_real)
print(produto)
print(potencia)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:10:54)
-- CODE: 
X = int(input("Digite o valor de X:"))
Y = int(input("Digite o valor de Y:"))

# 1. Quociente da divisão inteira
quociente_inteiro = X// Y
# 2. Resto da divisão inteira
resto_inteiro = X % Y
# 3. Quociente da divisão real
quociente_real = X / Y
# 4. Produto de X vezes Y
Produto = x * Y
# 5. Valor de Y elevado à tereira potência
potencia = Y ** 3

# 5. Impressão na ordem solicitada
print (quociente_inteiro)
print(resto_inteiro)
print(quociente_real)
print(produto)
print(potencia)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Produto = x * Y
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Produto = x * Y
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Produto = x * Y
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Produto = x * Y
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Produto = x * Y
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Produto = x * Y
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:12:22)
-- CODE: 
X = int(input("Digite o valor de X:"))
Y = int(input("Digite o valor de Y:"))

# 1. Quociente da divisão inteira
quociente_inteiro = X // Y
# 2. Resto da divisão inteira
resto_inteiro = X % Y
# 3. Quociente da divisão real
quociente_real = X / Y
# 4. Produto de X vezes Y
produto = X * Y
# 5. Valor de Y elevado à tereira potência
potencia = Y ** 3

# 5. Impressão na ordem solicitada
print (quociente_inteiro)
print(resto_inteiro)
print(quociente_real)
print(produto)
print(potencia)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:56:11)
-- CODE: 
X = int(input("Digite o valor de X:"))
Y = int(input("Digite o valor de Y:"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Digite o valor de X:Digite o valor de Y:
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Digite o valor de X:Digite o valor de Y:
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Digite o valor de X:Digite o valor de Y:
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Digite o valor de X:Digite o valor de Y:
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Digite o valor de X:Digite o valor de Y:
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Digite o valor de X:Digite o valor de Y:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
